Retirei uma classe que estava sem uso
retirei a classe fixed-top porque não estava sendo usada

--- a/html/principal.html
+++ b/html/principal.html
@@ -16,7 +16,7 @@
 
   <body class="bg-dark">
           <!--Navbar-->
-    <header class="p-3 bg-dark text-white sticky-top fixed-top" style="border-bottom: 5px solid grey;">
+    <header class="p-3 bg-dark text-white sticky-top" style="border-bottom: 5px solid grey;">
       <div class="container-fluid">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="./principal.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
