--- a/html/Promoções.html
+++ b/html/Promoções.html
@@ -49,7 +49,7 @@
         As melhores promoções para você!
       </h1>
       <div class="mt-5 mb-5">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-sm-center">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
           <div class="col">
             <div class="card" style="width: 18rem;">
               <img src="../img/peru.jpg" class="card-img-top" alt="imagem do peru">
